--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
+/* css 초기화 */
+html    {
+    all: unset; 
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-size: 62.5%;
+    background-color: rgb(237, 230, 221);
+}
+
 body    {
+    font-family: "dunkel-sans-expanded", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 2.0rem;
+    
     word-break: keep-all;
     text-wrap: balance;
 
@@ -6,4 +22,54 @@ body    {
     padding: 0px;
 
     overflow-x: hidden;
+}
+
+h1  {
+    font-size: 4.8rem;
+    font-weight: 900; 
+    margin: 0px;
+    color: rgb(231, 55, 47);
+    text-align: center;
+}
+h2  {
+    font-size: 2.6rem;
+    font-weight: 900; 
+    margin: 0px;
+    color: rgb(231, 55, 47);
+    text-align: center;
+}
+h3  {
+    font-size: 1.8rem;
+    font-weight: 900; 
+    margin: 0px;
+    color: rgb(231, 55, 47);
+    text-align: center;
+}
+h4  {
+    font-size: 1.2rem;
+    font-weight: 900; 
+    margin: 0px;
+    color: rgb(231, 55, 47);
+    text-align: center;
+}
+
+p   {
+    font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+    font-family: Pretendard;
+    font-style: normal;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 140%; /* 19.6px */
+    color: rgb(50, 50, 50);
+}
+
+header  {
+    height: 5rem;
+    display: flex;
+    justify-content: space-between;
+    padding: 2.0rem;
+}
+
+section {
+    margin: 2.0rem;
 }
