--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 /* css 초기화 */
 html    {
     all: unset; 
-    margin: 0px;
+    margin: auto;
     padding: 0px;
     box-sizing: border-box;
     font-size: 62.5%;
-    background-color: rgb(237, 230, 221);
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 body    {
@@ -16,12 +19,14 @@ body    {
     font-size: 2.0rem;
     
     word-break: keep-all;
-    text-wrap: balance;
 
+    min-width: 100vw;
+    min-height: 100vh;
     margin: 0px;
     padding: 0px;
 
     overflow-x: hidden;
+    background-color: rgb(213, 205, 195);
 }
 
 h1  {
@@ -30,6 +35,8 @@ h1  {
     margin: 0px;
     color: rgb(231, 55, 47);
     text-align: center;
+    line-height: 120%;
+    padding-bottom: 1.8rem;
 }
 h2  {
     font-size: 2.6rem;
@@ -37,6 +44,7 @@ h2  {
     margin: 0px;
     color: rgb(231, 55, 47);
     text-align: center;
+    line-height: 130%;
 }
 h3  {
     font-size: 1.8rem;
@@ -44,12 +52,30 @@ h3  {
     margin: 0px;
     color: rgb(231, 55, 47);
     text-align: center;
+    line-height: 130%;
 }
 h4  {
     font-size: 1.2rem;
+    font-weight: 700; 
+    margin: 0px;
+    color: rgb(255, 47, 52);
+    text-align: center;
+}
+h5  {
+    font-size: 3.2rem;
     font-weight: 900; 
     margin: 0px;
-    color: rgb(231, 55, 47);
+    color: rgb(50, 50, 50);
+    text-align: left;
+}
+h6  {
+    font-family: Pretendard;
+    font-style: normal;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 140%;
+    margin: 0px;
+    color: white;
     text-align: center;
 }
 
@@ -58,18 +84,311 @@ p   {
     font-family: Pretendard;
     font-style: normal;
     font-size: 1.4rem;
-    font-weight: 500;
-    line-height: 140%; /* 19.6px */
+    font-weight: 400;
+    line-height: 140%;
     color: rgb(50, 50, 50);
+    margin: 0;
+    max-width: 80rem;
 }
 
 header  {
-    height: 5rem;
+    box-sizing: border-box;
+    height: 9rem;
+    width: 100vw;
+
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+
     padding: 2.0rem;
+
+    background-color: rgb(237, 230, 221);
+}
+
+main    {
+    padding-top: 9rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.0rem;
 }
 
 section {
-    margin: 2.0rem;
+    box-sizing: border-box;
+    padding: 2.0rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4.0rem;
+    background-color: rgb(237, 230, 221);
+}
+
+div {
+    display: flex;
+    flex-direction: column;
+}
+
+footer  {
+    background-color: rgb(181, 164, 142);
+    padding: 2.0rem;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 2.0rem;
+}
+
+hr  {
+    width: calc(100vw - 4rem);
+    border-color: black;
+    border-width: 0.05rem;
+}
+
+li  {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    box-sizing: border-box;
+    list-style-type: none;
+    width: calc(100vw - 4rem);
+    padding: 2rem 1rem;
+    gap: 1.5rem;
+}
+
+li h3 {
+    text-align: left;
+    line-height: 150%;
+}
+
+button  {
+    all: unset;
+    width: 3.4rem;
+    height: 3.4rem;
+}
+
+button img {
+    transition: transform 0.3s ease;
+}
+
+button img.rotated {
+    transform: rotate(180deg);
+}
+
+a   {
+    text-decoration: none;
+}
+
+table   {
+    border-collapse: collapse;
+    width: calc(100vw - 4rem);
+}
+
+th  {
+    height: 3.6rem;
+    background-color: black;
+    border: 1px solid black;
+    color: white;
+}
+
+td  {
+    padding: 1rem 0.8rem;
+    border: 1px solid black;
+}
+
+td h6    {
+    text-align: left;
+    color: black;
+}
+
+#menu   {
+    position: fixed;
+    background-color: rgb(237, 230, 221);
+    width: 100vw;
+    height: calc(100vh - 9rem);
+    margin-left: 100vw;
+    transition: margin-left 0.5s ease;
+    z-index: 2;
+}
+
+#menu.active {
+    margin-left: 0; /* 메뉴가 보이는 상태 */
+}
+
+.no-scroll {
+    overflow: hidden; /* 스크롤 비활성화 */
+}
+
+.inactive   {
+    display: none;
+}
+
+.red    {
+    color: rgb(255, 47, 52);
+}
+.blue   {
+    color: rgb(38, 135, 214);
+}
+.green  {
+    color: rgb(3, 165, 75);
+}
+
+.white   {
+    color: white;
+}
+.gray   {
+    color: rgb(20, 20, 20);
+}
+
+.redBox   {
+    background-color: rgb(255, 47, 52);
+}
+.blueBox   {
+    background-color: rgba(38, 135, 214);
+}
+.greenBox   {
+    background-color: rgb(3, 165, 75);
+}
+.blackBox   {
+    background-color: black;
+}
+
+
+.barGraphic {
+    width: 1.3rem;
+}
+
+.mainTitle  {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+.titleInner {
+    align-items: center;
+}
+
+.titleImg   {
+    max-width: 1000px;
+    width: calc(100vw - 4rem);
+    margin: 0 auto;
+    padding-bottom: 2.4rem;
+}
+
+.titleText  {
+    gap: 0.8rem;
+}
+
+._logoImg   {
+    max-width: 20rem;
+    width: 30vw;
+    margin: 0 auto;
+    padding-bottom: 4.0rem;
+}
+
+.mainGraphic    {
+    max-width: 1000px;
+    width: calc(100vw - 8rem);
+    gap: 1.6rem;
+    padding-bottom: 2.0rem;
+}
+
+.date   {
+    padding-bottom: 4.0rem;
+}
+
+.time   {
+    width: calc(100vw - 8rem);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.subTitle   {
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2.0rem;
+    z-index: 1;
+}
+
+.subTitleAsset  {
+    position: absolute;
+    width: 20rem;
+}
+
+.subTitleText   {
+    position: absolute;
+}
+
+.subTitleTextBlue   {
+    position: absolute;
+    color: rgba(38, 135, 214, 1);
+}
+
+.subTitleTextGreen   {
+    position: absolute;
+    color: rgba(3, 165, 75, 1);
+}
+
+.sectionList    {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 0;
+    padding: 0;
+}
+
+.accordionBox   {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul p {
+    overflow: hidden;
+    height: 0;
+    opacity: 0;
+    transition: height 0.3s ease, opacity 0.3s ease;
+    display: none;
+}
+
+ul p.active {
+    display: block;
+    opacity: 1;
+}
+
+.exhibitionSection {
+    padding-top: 0;
+}
+
+.exhibitionArea {
+    width: calc(100vw);
+}
+
+.exhibitionArea th {
+    border-left: 0px;
+    border-right: 0px;
+}
+
+.box   {
+    border: 1px solid #000;
+}
+
+.detail {
+    align-items: center;
+}
+
+.copyright  {
+    padding: 5rem 0 1rem;
+    align-items: center;
 }
